<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>DialogObject</class>
 <widget class="QDialog" name="DialogObject">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>566</width>
    <height>400</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Object Editor</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="1" column="1">
    <widget class="QDoubleSpinBox" name="doubleSpinBox_translate_x">
     <property name="decimals">
      <number>4</number>
     </property>
     <property name="minimum">
      <double>-9999999999.000000000000000</double>
     </property>
     <property name="maximum">
      <double>9999999999.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="2" column="2">
    <widget class="QDoubleSpinBox" name="doubleSpinBox_rotate_y">
     <property name="decimals">
      <number>4</number>
     </property>
     <property name="minimum">
      <double>-9999999999.000000000000000</double>
     </property>
     <property name="maximum">
      <double>9999999999.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="1" column="2">
    <widget class="QDoubleSpinBox" name="doubleSpinBox_translate_y">
     <property name="decimals">
      <number>4</number>
     </property>
     <property name="minimum">
      <double>-9999999999.000000000000000</double>
     </property>
     <property name="maximum">
      <double>9999999999.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="0" column="0">
    <widget class="QLabel" name="label_name">
     <property name="text">
      <string>Name</string>
     </property>
    </widget>
   </item>
   <item row="11" column="0" colspan="4">
    <widget class="QDialogButtonBox" name="buttonBox">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="QLabel" name="label_scale">
     <property name="text">
      <string>Scale</string>
     </property>
    </widget>
   </item>
   <item row="10" column="0" colspan="4">
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="label_rotation_plan">
     <property name="text">
      <string>Rotation</string>
     </property>
    </widget>
   </item>
   <item row="2" column="1">
    <widget class="QDoubleSpinBox" name="doubleSpinBox_rotate_x">
     <property name="decimals">
      <number>4</number>
     </property>
     <property name="minimum">
      <double>-9999999999.000000000000000</double>
     </property>
     <property name="maximum">
      <double>9999999999.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="4" column="0">
    <widget class="QLabel" name="label_material">
     <property name="text">
      <string>Material</string>
     </property>
    </widget>
   </item>
   <item row="9" column="1" colspan="3">
    <widget class="QCheckBox" name="checkBox_caps">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="text">
      <string>Caps</string>
     </property>
    </widget>
   </item>
   <item row="4" column="1" colspan="3">
    <widget class="QComboBox" name="comboBox_material"/>
   </item>
   <item row="7" column="0">
    <widget class="QLabel" name="label_height">
     <property name="text">
      <string>Height</string>
     </property>
    </widget>
   </item>
   <item row="8" column="1" colspan="3">
    <widget class="QDoubleSpinBox" name="doubleSpinBox_width">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="decimals">
      <number>4</number>
     </property>
     <property name="minimum">
      <double>-9999999999.000000000000000</double>
     </property>
     <property name="maximum">
      <double>9999999999.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="3" column="1">
    <widget class="QDoubleSpinBox" name="doubleSpinBox_scale_x">
     <property name="decimals">
      <number>4</number>
     </property>
     <property name="minimum">
      <double>-9999999999.000000000000000</double>
     </property>
     <property name="maximum">
      <double>9999999999.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="0" column="1" colspan="3">
    <widget class="QLineEdit" name="lineEdit_name"/>
   </item>
   <item row="1" column="3">
    <widget class="QDoubleSpinBox" name="doubleSpinBox_translate_z">
     <property name="decimals">
      <number>4</number>
     </property>
     <property name="minimum">
      <double>-9999999999.000000000000000</double>
     </property>
     <property name="maximum">
      <double>9999999999.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="label_translate">
     <property name="text">
      <string>Translate</string>
     </property>
    </widget>
   </item>
   <item row="2" column="3">
    <widget class="QDoubleSpinBox" name="doubleSpinBox_rotate_z">
     <property name="decimals">
      <number>4</number>
     </property>
     <property name="minimum">
      <double>-9999999999.000000000000000</double>
     </property>
     <property name="maximum">
      <double>9999999999.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="5" column="0">
    <widget class="QLabel" name="label_object_type">
     <property name="text">
      <string>Object Type</string>
     </property>
    </widget>
   </item>
   <item row="5" column="1" colspan="3">
    <widget class="QComboBox" name="comboBox_object_type">
     <item>
      <property name="text">
       <string>Plan</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Cube</string>
      </property>
     </item>
     <item>
      <property name="text">
       <string>Cylinder</string>
      </property>
     </item>
    </widget>
   </item>
   <item row="3" column="2">
    <widget class="QDoubleSpinBox" name="doubleSpinBox_scale_y">
     <property name="decimals">
      <number>4</number>
     </property>
     <property name="minimum">
      <double>-9999999999.000000000000000</double>
     </property>
     <property name="maximum">
      <double>9999999999.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="3" column="3">
    <widget class="QDoubleSpinBox" name="doubleSpinBox_scale_z">
     <property name="decimals">
      <number>4</number>
     </property>
     <property name="minimum">
      <double>-9999999999.000000000000000</double>
     </property>
     <property name="maximum">
      <double>9999999999.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="8" column="0">
    <widget class="QLabel" name="label_width">
     <property name="text">
      <string>Width</string>
     </property>
    </widget>
   </item>
   <item row="7" column="1" colspan="3">
    <widget class="QDoubleSpinBox" name="doubleSpinBox_height">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="decimals">
      <number>4</number>
     </property>
     <property name="minimum">
      <double>-9999999999.000000000000000</double>
     </property>
     <property name="maximum">
      <double>9999999999.000000000000000</double>
     </property>
    </widget>
   </item>
   <item row="6" column="0">
    <widget class="QLabel" name="label_subdivisions">
     <property name="text">
      <string>Subdivisions</string>
     </property>
    </widget>
   </item>
   <item row="6" column="1" colspan="3">
    <widget class="QSpinBox" name="spinBox_subdivisions">
     <property name="enabled">
      <bool>false</bool>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <tabstops>
  <tabstop>lineEdit_name</tabstop>
  <tabstop>doubleSpinBox_translate_x</tabstop>
  <tabstop>doubleSpinBox_translate_y</tabstop>
  <tabstop>doubleSpinBox_translate_z</tabstop>
  <tabstop>doubleSpinBox_rotate_x</tabstop>
  <tabstop>doubleSpinBox_rotate_y</tabstop>
  <tabstop>doubleSpinBox_rotate_z</tabstop>
  <tabstop>doubleSpinBox_scale_x</tabstop>
  <tabstop>doubleSpinBox_scale_y</tabstop>
  <tabstop>doubleSpinBox_scale_z</tabstop>
  <tabstop>comboBox_material</tabstop>
  <tabstop>comboBox_object_type</tabstop>
  <tabstop>spinBox_subdivisions</tabstop>
  <tabstop>doubleSpinBox_height</tabstop>
  <tabstop>doubleSpinBox_width</tabstop>
  <tabstop>checkBox_caps</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>buttonBox</sender>
   <signal>accepted()</signal>
   <receiver>DialogObject</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>248</x>
     <y>254</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttonBox</sender>
   <signal>rejected()</signal>
   <receiver>DialogObject</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>316</x>
     <y>260</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
